Changes for 2.2.4rc3

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.2.4rc2

New features:
A.F....... [ZBX-1357] updated Italian, German and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8358] fixed vertical table header cell text centering (Krists)
.......PS. [ZBX-8095] fixed a bug in item queue that updated item's nextcheck but not its position in the queue (asaveljevs)
...G...PS. [ZBX-8343] fixed a bug in binary heap that could cause a slightly inconsistent ordering of elements in the queue (asaveljevs)
.......PS. [ZBX-8325] fixed crash with Oracle when inserting large number of records (wiper)
........S. [ZBX-8336] fixed server crash with value cache is working in low memory mode (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.4rc1

New features:
..F....... [ZBX-7399] improved multiselect, added popup select window (Oleg)
.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Polish, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
...G...... [ZBX-8327] fixed possible crash when processing Windows eventlog (wiper)
..F....... [ZBX-8302] fixed ordering of discovery rules (Andrejs)
..F....... [ZBX-8209] improved host and item name column widths on Monitoring / Latest data page (Krists)
.......PS. [ZBX-8287] added truncating of long text values to maximum field length before inserting into database (Andris)
........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
A.F....... [ZBX-7373] improved performance of latest data and item overview pages by taking data for limited period only (Pavels)